--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=whateat
-spring.data.mongodb.uri=mongodb+srv://supasirikulkk9:Id1100801312474@cluster0.whjpn.mongodb.net/
-spring.data.mongodb.database=project_whateat
+spring.data.mongodb.uri=mongodb+srv://whateat:iXLgutTc64YdQiGN@cluster0.whjpn.mongodb.net/
+spring.data.mongodb.database=whateat
